RESOLVED FIXED288493
REGRESSION (290766@main): [ macOS wk2 debug ] http/tests/media/fairplay/legacy-fairplay-mse-muxed-nowait.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=288493
Summary REGRESSION (290766@main): [ macOS wk2 debug ] http/tests/media/fairplay/legac...
Karl Rackler
Reported 2025-02-25 09:35:20 PST
Description: http/tests/media/fairplay/legacy-fairplay-mse-muxed-nowait.html This issue can be reproduced using command: run-webkit-tests --debug --no-retry --force --iterations=1 http/tests/media/fairplay/legacy-fairplay-mse-muxed-nowait.html History: https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Ffairplay%2Flegacy-fairplay-mse-muxed-nowait.html&flavor=wk2&style=debug Crash Log: No crash log found for com.apple.WebKit.GPU.Development:73836. stdout: stderr: ASSERTION FAILED: canSafelyBeUsed() /System/Volumes/Data/otmp/case-sensitive/od.luxon/lw.luxon/sandbox-0/Desktop/Build/Build/Products/webkit/usr/local/include/wtf/WeakPtr.h(94) : T *WTF::WeakPtr<WebCore::CDMSessionAVContentKeySession>::get() const [T = WebCore::CDMSessionAVContentKeySession, WeakPtrImpl = WTF::DefaultWeakPtrImpl, PtrTraits = WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>] 1 0x3632a2e30 WTF::WeakPtr<WebCore::CDMSessionAVContentKeySession, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>>::get() const 2 0x365963308 -[WebCDMSessionAVContentKeySessionDelegate contentKeySession:didProvideContentKeyRequest:] 3 0x19f4aede8 __97-[AVContentKeySession(AVContentKeyRequestSupport) issueContentKeyRequests:forInitializationData:]_block_invoke 4 0x19f3b2ca4 AVPerformDelegateCallbackSynchronouslyForDelegateStorageIfCurrentDelegateQueueIsQueueElseDispatchToCurrentDelegateQueue 5 0x19f4ae150 __130-[AVContentKeySession(AVContentKeySessionPrivateUtilities) _invokeDelegateCallbackWithBlock:synchronouslyWhenDelegateQueueIsNULL:]_block_invoke.610 6 0x18985b750 _dispatch_call_block_and_release 7 0x18985d3e8 _dispatch_client_callout 8 0x189864a14 _dispatch_lane_serial_drain 9 0x189865544 _dispatch_lane_invoke 10 0x1898702d0 _dispatch_root_queue_drain_deferred_wlh 11 0x18986fb44 _dispatch_workloop_worker_thread 12 0x189a0a00c _pthread_wqthread 13 0x189a08d28 start_wqthread com.apple.WebKit.GPU.Development terminated (pid 73836) for reason: crash LEAK: 1 WebPageProxy
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-25 09:35:46 PST
EWS
Comment 2 2025-02-25 09:50:05 PST
Test gardening commit 291034@main (0d82c5998c17): <https://commits.webkit.org/291034@main> Reviewed commits have been landed. Closing PR #41299 and removing active labels.
Karl Rackler
Comment 3 2025-02-25 09:58:52 PST
Description: These two tests are also affected by same assertion. http/tests/media/fairplay/legacy-fairplay-mse-v2.html http/tests/media/fairplay/legacy-fairplay-mse-v3.html
EWS
Comment 4 2025-02-25 10:08:53 PST
Test gardening commit 291036@main (304cee748f91): <https://commits.webkit.org/291036@main> Reviewed commits have been landed. Closing PR #41301 and removing active labels.
Ryosuke Niwa
Comment 5 2025-02-25 11:22:40 PST
EWS
Comment 6 2025-02-25 16:37:40 PST
Committed 291071@main (9e703cd662ad): <https://commits.webkit.org/291071@main> Reviewed commits have been landed. Closing PR #41310 and removing active labels.
EWS
Comment 7 2025-03-05 09:25:46 PST
Test gardening commit 291630@main (2a35facce2de): <https://commits.webkit.org/291630@main> Reviewed commits have been landed. Closing PR #41926 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.